--- a/Melati_Donation_System/views/index.html
+++ b/Melati_Donation_System/views/index.html
@@ -1,39 +1,89 @@
+<!DOCTYPE html>
 <html>
 <head>
-   <title>MELATI DONATION SYSTEM</title>
-    
-   
-   <link href="javascripts/jquery/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
-   <link href="javascripts/jquery/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-   <script src="javascripts/jquery/bootstrap.min.js" type="text/javascript"></script>
-   <script src="javascripts/jquery/jquery.min.js" type="text/javascript"></script>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Lumino - Panels</title>
+
+<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+<link href="assets/css/datepicker3.css" rel="stylesheet">
+<link href="assets/css/styles.css" rel="stylesheet">
+
+<!--Icons-->
+<script src="assets/js/lumino.glyphs.js"></script>
+
+<!--[if lt IE 9]>
+<script src="js/html5shiv.js"></script>
+<script src="js/respond.min.js"></script>
+<![endif]-->
+
 </head>
+
 <body>
-   <div style="margin:100px;">
-     <nav class="navbar navbar-inverse navbar-static-top">
-   <div class="container">
-     <a class="navbar-brand" href="/">MELATI DONATION SYSTEM</a>
-     <ul class="nav navbar-nav">
-       <li class="active">
-         <a href="/">Home</a>
-       </li>
-       <li>
-         <a href="/about">About</a>
-       </li>
-       <li>
-         <a href="/sitemap">Sitemap</a>
-       </li>
-     </ul>
-   </div>
-</nav>
-     <div class="jumbotron"  style="padding:40px;">
-       <h1>Hello, </h1>
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sidebar-collapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#"><span>Lumino</span>Admin</a>
+			</div>
+							
+		</div><!-- /.container-fluid -->
+	</nav>
+		
+	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
+		<form role="search">
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Search">
+			</div>
+		</form>
+		<ul class="nav menu">
+			<li><a href="/"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Home</a></li>
+			<li><a href="/about"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> about</a></li>
+      <li><a href="/sitemap"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> sitemap</a></li>
+			<li role="" class="divider"> </li>
+		</ul>
+	</div><!--/.sidebar-->
+		
+	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">				
+		<h1>Hello, </h1>
        <p>Selamat Datang , Di MELATI DONATION SYSTEM,  
          MELATI DONATION SYSTEM  adalah sebuah system yang kami rancang untuk transparansi sumbangan anda . 
            Anda dapat memberikan donasi untuk siswa didik yang kurang mampu maupun untuk pengembangan Madrasah .   </p>
        <p>Transparansi dan amanah adalah prinsip kami </p>
        
-     </div>
-   </div>
+	</div><!-- /.row -->
+		
+	</div><!--/.main-->
+
+	<script src="assets/js/jquery-1.11.1.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/chart.min.js"></script>
+	<script src="assets/js/chart-data.js"></script>
+	<script src="assets/js/easypiechart.js"></script>
+	<script src="assets/js/easypiechart-data.js"></script>
+	<script src="assets/js/bootstrap-datepicker.js"></script>
+	<script>
+		!function ($) {
+			$(document).on("click","ul.nav li.parent > a > span.icon", function(){		  
+				$(this).find('em:first').toggleClass("glyphicon-minus");	  
+			}); 
+			$(".sidebar span.icon").find('em:first').addClass("glyphicon-plus");
+		}(window.jQuery);
+
+		$(window).on('resize', function () {
+		  if ($(window).width() > 768) $('#sidebar-collapse').collapse('show')
+		})
+		$(window).on('resize', function () {
+		  if ($(window).width() <= 767) $('#sidebar-collapse').collapse('hide')
+		})
+	</script>	
 </body>
+
 </html>
+
+
